assets/stylesheets/main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, .primary-header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, .primary-header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*
  ========================================
  Custom styles
  ========================================
*/

body {
  background: #74b4b4;
}
.page {
  border-bottom: 1px solid rgba(72, 74, 77, 0.5);
  padding: 20px 0;
}
.main-page {
  background: #74b4b4;
  color: #f9ebd9
}
.about {
  background: #e4e0d0;
}
.portfolio {
  background: #e58d6b;
}
.blog {
  background: #dbd8d5;
}
.contact-page {
  background: #4a4e55;
  color: #f9ebd9
}

/*
  ========================================
  Typography
  ========================================
*/

h1, h2, h3, h4, h5, h6 {
    text-transform: uppercase;
  }
h2 {
  font-size: 1.5em;
}
.main-page h1 {
  text-shadow: 1px 2px #484A4D, 3px 4px #D4CEBF;
}
.about h1 {
  text-shadow: 1px 2px #FCFAF7, 3px 4px #484A4D;
}
.portfolio h1 {
  text-shadow: 1px 2px #FCFAF7, 3px 4px #484A4D;
}
.blog h1 {
  text-shadow: 1px 2px #FCFAF7, 3px 4px #484A4D;
}
.contact-page h1 {
  text-shadow: 1px 2px #484A4D, 3px 4px #D4CEBF;
}


/*
  ========================================
  Navigation
  ========================================
*/

.nav li {
  display: inline-block;
  margin: 0 20px;
  vertical-align: middle;
}
.primary-nav {
  margin-top: 50px;
  letter-spacing: .5px;
  text-align: center;
  text-transform: uppercase;
  font: 700 16px sans-serif;
  text-shadow: 0 2px 2px rgba(0,0,0,0.3);
}


/*
  ========================================
  Primary header
  ========================================
*/

#logo {
  display: block;
  position: absolute;
  left: 50%;
  margin-left: -75px;
  margin-top: -30px;

}
.primary-header {
  background: #78bbbb;
  height: 120px;
  position: fixed;
  top: 0;
  width: 100%;
  -webkit-box-shadow: 0 2px 23px -5px rgba(0,0,0,0.63);
     -moz-box-shadow: 0 2px 23px -5px rgba(0,0,0,0.63);
          box-shadow: 0 2px 23px -5px rgba(0,0,0,0.63);
  
}
.primary-header ul li:nth-of-type(3) {
  margin-left: 200px;
}

/*
  ========================================
  Primary footer
  ========================================
*/

.primary-footer {
  background: #4a4e55;
  color: #f9ebd9;
}

/*
  ========================================
  Clearfix
  ========================================
*/
.group:before,
.group:after {
  content: "";
  display: table;
}
.group:after {
  clear: both;
}
.group {
  clear: both;
  *zoom: 1;
}


/*
  ========================================
  Rows
  ========================================
*/

.row,
.row-alt {
  min-width: 960px;
}
.row {
  padding: 66px 0 44px 0;
}

/*
  ========================================
  Links
  ========================================
*/

a {
  color: #f9ebd9;
  text-decoration: none;
}
a:hover {
  color: #525557;
}
#logo:hover {
  margin-top: -10px;
}

/*
  ========================================
  Grid
  ========================================
*/

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}
.container,
.grid {
  margin: 0 auto;
  width: 960px;

}
.container {
  padding-left: 10px;
  padding-right: 10px;
}
.grid,
.col-1-3,
.col-2-3,
.col-1-4 {
  padding-left: 5px;
  padding-right: 5px;
}
.col-1-3,
.col-2-3,
.col-1-4  {
  display: inline-block;
  vertical-align: top;
}
.col-1-3 {
  width: 33.33%;
}
.col-2-3 {
  width: 66.66%;
}
.col-1-4 {
  width: 25%;
}

/*
  ========================================
  Home
  ========================================
*/

.hero {
  padding-top: 50px;
  text-align: center;
}
.hero h1 {
  font-size: 90px;
  font-weight: 600;
  margin: 10px;

}
.main-page {
  padding-top: 200px;
}
.hr-bottom {
  margin: 0;
  border-top: 1px dashed rgba(0,0,0,0.25);
  border-bottom: 1px dashed rgba(255,255,255,0.25);
  position: absolute;
  bottom: 10px;
  width: 100%;
}

/*
  ========================================
  Images
  ========================================
*/

.slideshow {
  display: block;
  margin: 50px 0;
}
.slideshow img {
  border: 8px solid #fff;
  border-bottom: 34px solid #fff;
}
.slideshow figcaption {
  display: block;
  color: #4a4e55;
  font: 700 16px/22px sans-serif;
  margin-top: -30px;
}
.portfolio img {
  width: 210px;
  border: 4px solid #fff;
  border-bottom: 50px solid #fff;
}
.grid h5 {
  position: relative;
  margin-top: -70px;
}
.grid i {
  position: relative;
  top: -70px;
  background: #fff;
  display: block;
  width: 40px;
  height: 40px;
  line-height: 1.5;
  margin: 0 auto;
  border-radius: 50%;
}
.grid i:hover {
  margin-top: -7px;
}

/*
  ========================================
  Icons
  ========================================
*/

.big-icon {
  color: #484A4D;
}

